[package]
name = "front-vec"
version = "0.0.1"
edition = "2021"
authors = ["eignnx"]
description = "Efficiently-prependable Vec and String types."
license = "MIT"

categories = ["data-structures"]
keywords = ["string", "prepend", "cons", "vec", "push"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
